v3.6.0 (XXXX-XX-XX)
-------------------

* Do not create a reboot tracker for empty serverId ubin sync repl.

* Update swagger.


v3.6.0-rc.2 (2019-12-23)
------------------------

* Fixed issue #10725: Wrong document count shown inside an empty collection in
  the web UI.

* Fixed bug that made AQL queries eligible for parallelization even in case
  they couldn't be parallelized, leading to undefined behavior due to the
  thread races.

* Fixed bug in `--query.parallelize-gather-writes-behavior` which led to
  the option not working correctly.

* Agency relational operators TTL fix.

* Improve latency in scheduler.

* Fixed internal issue #4748: Editing a single edgeDefinition using the graph
  API failed if it was not shared between all available graphs.

* Fixed undefined behavior on node delete.

* Fixed agency invalid operation.

* Added google tests for Node.

* Bugfix: An AQL ternary expression with the condition being true at query
  compile time would not execute its false branch.

* When starting the RocksDB engine, first create small-sized WAL files.

  This is a precaution so that when repeatedly trying to start an arangod
  instance, an instant instance startup failure will not lead to the disk
  filling up so quickly with WAL file data.

  The WAL file size is increased later on in the startup sequence, so
  everything should be fine if the startup works.

  This fixes a problem with the disk filling up quickly when the arangodb 
  starter tries to start an instance 100 times in a row but instantaneously 
  gets a failure back from it.

* Fixed a permissions bug for /_admin/cluster/rebalanceShards.


v3.6.0-rc.1 (2019-12-10)
------------------------

* Renamed document / index / vertex "handle" to "identifier" / "id" for
  consistency in documentation and error messages.

* Fixed a bug in smart graph bfs traversals that might violate path uniqueness
  requirements in rare cases.

* Fixed permissions for dump/restore.
